# icemail-mcp

./: .env  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  index.js  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  server.py
